# ananimlib

./: .gitignore  .readthedocs.yaml  README.rst  environment.yml  screed.py  setup.cfg  testutils.py
Tutorial/: basics.py  coordinate_systems.py  plotting.py  quick.py
ananimlib/: __init__.py  ananim.py  ananim_old.py  anobject.py  anobject_dead.py  backend.py  basic_instructions.py  bezier.py  camera.py  common_anobs.py  config.py  coordinates.py  core_instructions.py  core_instructions_old.py  custom_anobs.py  experimental_anobjects.py  instruction.py  manim.ini  plot_anobject.py  plot_anobs.py  render.py  scene.py  search.py  tex_anobject.py  transfer_funcs.py
docs/: 1  Makefile  Stuff.rst  ananimlib.code-workspace  ananimlib_api.rst  class_diagram.uxf  complex.rst  conf.py  custom_mobjects.rst  index.rst  install.rst  live.py  manimlib2.rst  quickstart.rst  requirements.txt  technical.rst  tutorial.rst
docs/code/: GraphPaper.py  build_fig.py  build_tutorial.py  coordinates.py  custom_mobjects1.py  figure_template.py  logo.py  manimlib_structure.py  more_complex.py  more_complex_ex1.py  plotting.py  quickstart.py  quickstart_ex1.py  quickstart_ex2.py  quickstart_ex3.py  quickstart_ex4.py  quickstart_ex5.py  quickstart_ex5_1.py  quickstart_ex6.py  quickstart_ex6_1.py  quickstart_ex7.py  quickstart_ex8.py  quickstart_old.py  test.py  tutorial.py  tutorial_snip1.py  tutorial_snip2.py  tutorial_snip3.py  tutorial_snip4.py  (+2 more)
tests/: test_anobject.py  test_bezier.py  test_composite.py  test_import.py  test_swap.py
tests - Copy/: test_manim.py  test_mobject.py
(+2 files in other folders)
