# -*- coding: utf-8 -*-

[metadata]
name = ananimlib
version = 0.0.1
author = G. Ruch
author_email = gtruch@stthomas.edu
description = Another 2D Animation engine
long_description = file: README.rst
long_description_content_type = text/reStructuredText
url = https://github.com/USTPhysics/ananimlib
project_urls =
    Bug Tracker = https://github.com/USTPhysics/ananimlib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 
    Operating System :: OS Independent

[options]
packages = ananimlib
install_requires=
    pycairo
    colour
    pydub
    pygame
    pillow
    numpy
    scipy

