# -*- coding: utf-8 -*-

[metadata]
name = ananimlib
version = 0.0.1
author = G. Ruch
author_email = gtruch@stthomas.edu
description = Mathematically Precise Animations, Intuitive and Extensible API
long_description = file: README.rst
url = https://github.com/gtruch/ananimlib
project_urls =
    Bug Tracker = https://github.com/gtruch/ananimlib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = ananimlib
install_requires=
    pycairo
    colour
    pydub
    pygame
    pillow
    numpy
    scipy

